incrementing vue version, fixing lnbs-asset-copy error

--- a/vuejs-portlet/.npmbuildrc
+++ b/vuejs-portlet/.npmbuildrc
@@ -1,13 +1,3 @@
 {
-	"translatorTextKey": "",
-	"supportedLocales": [],
-	"liferayDir": "/opt/liferayPlayground",
-	"webpack": {
-		"rules": [
-			{
-				"test": "src\\/.*\\.js$",
-				"use": "babel-loader"
-			}
-		]
-	}
+	"liferayDir": "/opt/liferayPlayground/"
 }
