--- a/vuejs-portlet/package.json
+++ b/vuejs-portlet/package.json
@@ -17,18 +17,19 @@
 		"@babel/core": "^7.11.1",
 		"@babel/cli": "^7.10.5",
 		"@vue/cli-service": "^4.5.4",
-		"vue-template-compiler": "^2.6.11"
+		"vue-template-compiler": "^2.6.12"
 	},
 	"dependencies": {
-		"vue": "2.6.11"
+		"vue": "^2.6.12"
 	},
 	"scripts": {
-		"build": "babel --source-maps -d build src && vue-cli-service build --dest build/ --formats commonjs --target lib --name index ./src/index.js && npm run copy-assets",
+		"build": "babel --source-maps -d build src && vue-cli-service build --dest build/ --formats commonjs --target lib --name index ./src/index.js && npm run copy-assets && liferay-npm-bundler",
 		"copy-assets": "lnbs-copy-assets",
 		"deploy": "npm run build && lnbs-deploy",
 		"start": "lnbs-start"
 	},
 	"portlet": {
+		"com.liferay.portlet.header-portlet-css": "/css/styles.css",
 		"com.liferay.portlet.display-category": "category.sample",
 		"com.liferay.portlet.instanceable": true,
 		"javax.portlet.name": "vuejsportlet",
