--- a/vuejs-portlet/package.json
+++ b/vuejs-portlet/package.json
@@ -22,6 +22,8 @@
 		"vue-template-compiler": "^2.6.12",
 		"eslint": "^7.9.0",
 		"eslint-plugin-import": "^2.22.0",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-standard": "^4.0.1",
 		"eslint-plugin-vue": "^6.2.2",
 		"babel-eslint": "^10.1.0"
