--- a/vuejs-portlet/package.json
+++ b/vuejs-portlet/package.json
@@ -33,9 +33,10 @@
 		"vue": "^2.6.12"
 	},
 	"scripts": {
-		"build": "babel --source-maps -d build src && vue-cli-service build --dest build/ --formats commonjs --target lib --name index ./src/index.js && lnbs-copy-assets && liferay-npm-bundler",
+		"build": "npm run lint && babel --source-maps -d build src && vue-cli-service build --dest build/ --formats commonjs --target lib --name index ./src/index.js && lnbs-copy-assets && liferay-npm-bundler",
 		"deploy": "npm run build && lnbs-deploy",
-		"start": "lfr-js-start"
+		"start": "lfr-js-start",
+		"lint": "./node_modules/.bin/eslint 'src/**' --ignore-pattern '*.scss'"
 	},
 	"portlet": {
 		"com.liferay.portlet.header-portlet-css": "/index.css",
