--- a/vuejs-vuex-portlet/package.json
+++ b/vuejs-vuex-portlet/package.json
@@ -30,6 +30,7 @@
 		"@clavis/lfr-js-portlet-utils": "^1.1.0"
 	},
 	"dependencies": {
+		"generator-liferay-js": "^2.20.0",
 		"vue": "^2.6.12",
 		"vuex": "^3.5.1"
 	},
