--- a/vuejs-ts-portlet/package.json
+++ b/vuejs-ts-portlet/package.json
@@ -42,9 +42,10 @@
 		"core-js": "^3.6.5"
 	},
 	"scripts": {
-		"build": " babel --source-maps -d build src && vue-cli-service build --dest build/ --formats commonjs --target lib --name index ./src/index.ts && lnbs-copy-assets && liferay-npm-bundler",
+		"build": "npm run lint && babel --source-maps -d build src && vue-cli-service build --dest build/ --formats commonjs --target lib --name index ./src/index.ts && lnbs-copy-assets && liferay-npm-bundler",
 		"deploy": "npm run build && lnbs-deploy",
-		"start": "lfr-js-start"
+		"start": "lfr-js-start",
+		"lint": "eslint 'src/**' --ignore-pattern '*.scss'"
 	},
 	"portlet": {
 		"com.liferay.portlet.header-portlet-css": "/index.css",
