Updating vue.js portlet to version 1.1.0 with several improvements

--- a/vuejs-portlet/package.json
+++ b/vuejs-portlet/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "vuejs-portlet",
 	"version": "1.0.0",
-	"description": "Vuejs Portlet",
+	"description": "Vue.js Portlet",
 	"devDependencies": {
 		"liferay-npm-bundler": "^2.18.8",
 		"liferay-npm-build-support": "^2.18.5",
@@ -36,6 +36,7 @@
 		"build": "npm run lint && babel --source-maps -d build src && vue-cli-service build --dest build/ --formats commonjs --target lib --name index ./src/index.js && lnbs-copy-assets && liferay-npm-bundler",
 		"deploy": "npm run build && lnbs-deploy",
 		"start": "lfr-js-start",
+		"stop": "kill $(ps aux | grep 'lfr-js-start' | awk '{print $2}')",
 		"lint": "eslint 'src/**' --ignore-pattern '*.scss'"
 	},
 	"portlet": {
