--- a/vuejs-vuex-portlet/package.json
+++ b/vuejs-vuex-portlet/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "vuejs-vuex-portlet",
-	"version": "1.0.0",
-	"description": "Vuejs Vuex Portlet",
+	"version": "1.1.0",
+	"description": "Vue.js Vuex Portlet",
 	"devDependencies": {
 		"liferay-npm-bundler": "^2.18.8",
 		"liferay-npm-build-support": "^2.18.5",
@@ -30,7 +30,6 @@
 		"@clavis/lfr-js-portlet-utils": "^1.1.0"
 	},
 	"dependencies": {
-		"generator-liferay-js": "^2.20.0",
 		"vue": "^2.6.12",
 		"vuex": "^3.5.1"
 	},
