Updating vue.js vuex portlet with several improvements

--- a/vuejs-vuex-portlet/.babelrc
+++ b/vuejs-vuex-portlet/.babelrc
@@ -1,5 +1,5 @@
 {
-	"presets": ["@babel/preset-env"],
+	"presets": ["@vue/cli-plugin-babel/preset"],
 	"plugins": [
 		"@babel/plugin-syntax-class-properties",
 		"@babel/plugin-proposal-class-properties"
