--- a/vuejs-ts-portlet/package.json
+++ b/vuejs-ts-portlet/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "vuejs-ts-portlet",
 	"version": "1.0.0",
-	"description": "Vuej.s TypeScript Portlet",
+	"description": "Vue.js TypeScript Portlet",
 	"devDependencies": {
 		"liferay-npm-bundler": "^2.18.8",
 		"liferay-npm-build-support": "^2.18.5",
