--- a/vuejs-portlet/.npmbundlerrc
+++ b/vuejs-portlet/.npmbundlerrc
@@ -3,7 +3,7 @@
 		"output-dir": "dist",
 		"features": {
 			"js-extender": true,
-			"web-context": "/vuejs-portlet",
+			"web-context": "/jspdf-portlet",
 			"localization": "features/localization/Language",
 			"configuration": "features/configuration.json"
 		}
