--- a/vuejs-portlet/package.json
+++ b/vuejs-portlet/package.json
@@ -3,33 +3,34 @@
 	"version": "1.0.0",
 	"description": "Vue.js Portlet",
 	"devDependencies": {
-		"liferay-npm-bundler": "^2.18.8",
-		"liferay-npm-build-support": "^2.18.5",
-		"copy-webpack-plugin": "4.6.0",
-		"webpack": "4.29.6",
-		"webpack-cli": "3.3.0",
-		"webpack-dev-server": "3.2.1",
-		"babel-loader": "08.1.0",
-		"sass-loader": "^9.0.3",
-		"sass": "^1.26.10",
-		"@babel/core": "^7.11.1",
 		"@babel/cli": "^7.10.5",
-		"@babel/plugin-syntax-class-properties": "^7.10.4",
+		"@babel/core": "^7.11.1",
 		"@babel/plugin-proposal-class-properties": "^7.10.4",
+		"@babel/plugin-syntax-class-properties": "^7.10.4",
+		"@clavis/lfr-js-portlet-utils": "^1.1.0",
+		"@vue/cli-plugin-babel": "^4.5.11",
 		"@vue/cli-service": "^4.5.4",
 		"@vue/eslint-config-standard": "^5.1.2",
-		"@vue/cli-plugin-babel": "^4.5.11",
-		"vue-template-compiler": "^2.6.12",
+		"babel-eslint": "^10.1.0",
+		"babel-loader": "08.1.0",
+		"copy-webpack-plugin": "4.6.0",
 		"eslint": "^7.9.0",
 		"eslint-plugin-import": "^2.22.0",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-standard": "^4.0.1",
 		"eslint-plugin-vue": "^6.2.2",
-		"babel-eslint": "^10.1.0",
-		"@clavis/lfr-js-portlet-utils": "^1.1.0"
+		"liferay-npm-build-support": "^2.18.5",
+		"liferay-npm-bundler": "^2.18.8",
+		"sass": "^1.26.10",
+		"sass-loader": "^9.0.3",
+		"vue-template-compiler": "^2.6.12",
+		"webpack": "4.29.6",
+		"webpack-cli": "3.3.0",
+		"webpack-dev-server": "3.2.1"
 	},
 	"dependencies": {
+		"jspdf": "^2.3.0",
 		"vue": "^2.6.12"
 	},
 	"scripts": {
@@ -43,7 +44,7 @@
 		"com.liferay.portlet.header-portlet-css": "/index.css",
 		"com.liferay.portlet.display-category": "category.sample",
 		"com.liferay.portlet.instanceable": true,
-		"javax.portlet.name": "vuejs-portlet",
+		"javax.portlet.name": "jspdf-portlet",
 		"javax.portlet.security-role-ref": "power-user,user",
 		"javax.portlet.resource-bundle": "content.Language"
 	},
